<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/pay58sdk_dialog_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pay58sdk_dialog_title"
        android:gravity="center"
        android:text="@string/recharge_preferential_title"
        android:textColor="#333333"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_recharge_preferential_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="10dip"
        android:text="@string/recharge_preferential_info1"
        android:textColor="#333333"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recharge_preferential_amount"
            android:textColor="#bd2626"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_recharge_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#bd2626"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recharge_preferential_gift_amount"
            android:textColor="#bd2626"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_recharge_gift_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#bd2626"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="10dip"
        android:text="@string/recharge_preferential_info2"
        android:textColor="#333333"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="10dip" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:layout_weight="1"
            android:background="@drawable/pay58sdk_short_cancel_button"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_continue_recharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_weight="1"
            android:background="@drawable/pay58sdk_short_cancel_button"
            android:text="@string/continue_to_recharge"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>