<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/ways_to_pay" />

    <com.pay58.sdk.view.NestRadioGroup
        android:id="@+id/pay_way_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pay58sdk_bg"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >

            <RadioButton
                android:id="@+id/radio_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/pay58sdk_radiobuttonbg"
                android:button="@drawable/pay58sdk_radiobutton" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/pay58sdk_weixin"
                android:contentDescription="@string/image" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView1"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/imageView1"
                android:text="@string/weixin_pay"
                android:textColor="#111111"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="3dp"
                android:text="@string/weixin_pay_explain"
                android:textColor="#AEAEAE"
                android:textSize="12sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/pay58sdk_line"
            android:contentDescription="@string/image" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >

            <RadioButton
                android:id="@+id/radio_alipay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/pay58sdk_radiobuttonbg"
                android:button="@drawable/pay58sdk_radiobutton" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/pay58sdk_zhifubao_app"
                android:contentDescription="@string/image" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/imageView2"
                android:text="@string/zhifubao_app"
                android:textColor="#111111"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="3dp"
                android:text="@string/zhifubao_app_explain"
                android:textColor="#AEAEAE"
                android:textSize="12sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/pay58sdk_line"
            android:contentDescription="@string/image" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >

            <RadioButton
                android:id="@+id/radio_webpay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/pay58sdk_radiobuttonbg"
                android:button="@drawable/pay58sdk_radiobutton" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/pay58sdk_zhifubao_wap"
                android:contentDescription="@string/image" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/imageView3"
                android:text="@string/zhifubao_web"
                android:textColor="#111111"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView5"
                android:layout_below="@+id/textView5"
                android:layout_marginTop="3dp"
                android:text="@string/zhifubao_web_explain"
                android:textColor="#AEAEAE"
                android:textSize="12sp" />
        </RelativeLayout>
    </com.pay58.sdk.view.NestRadioGroup>

</LinearLayout>