<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/recharge_title_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/pay58sdk_title_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="58充值"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_recharge_close"
            android:layout_width="11dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/pay58sdk_bt_return_press" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/pay58sdk_bg"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recharge_amount"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_recharge_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:gravity="center_vertical|right"
            android:hint="@string/recharge_amount_hint"
            android:inputType="numberDecimal"
            android:maxLength="12"
            android:textColor="#E17721">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <include
        layout="@layout/pay58sdk_ways_to_pay_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <Button
        android:id="@+id/btn_recharge_immediately"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/pay58sdk_pay_button"
        android:enabled="false"
        android:text="@string/to_recharge"
        android:textColor="#FFFFFF"
        android:textSize="22sp" />

</LinearLayout>