<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/pay_title_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/pay58sdk_title_background" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="58支付"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_pay_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/pay58sdk_return_btn" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/order_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="20dp"
                android:text="@string/order_details"
                android:textColor="#111111" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/pay58sdk_bg"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingTop="15dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="13dp" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/total"
                        android:textColor="#111111" />

                    <TextView
                        android:id="@+id/tv_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#E17721" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/pay58sdk_line"
                    android:contentDescription="@string/image" />

                <TextView
                    android:id="@+id/tv_order_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="13dp"
                    android:singleLine="true"
                    android:textColor="#111111" />

                <TextView
                    android:id="@+id/tv_order_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="13dp"
                    android:layout_marginTop="5dp"
                    android:textColor="#A2A2A2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/account_information_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="13dp"
                    android:text="@string/account_information"
                    android:textColor="#111111" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/pay58sdk_bg"
                    android:orientation="vertical"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp" >

                    <LinearLayout
                        android:id="@+id/ly_account_balance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="13dp"
                        android:layout_marginRight="13dp" >

                        <CheckBox
                            android:id="@+id/chx_account_balance"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-2dp"
                            android:layout_weight="1"
                            android:button="@drawable/pay58sdk_checkbox"
                            android:text="@string/promotion_surplus"
                            android:textColor="#111111" />

                        <TextView
                            android:id="@+id/tv_account_balance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="#000000"
                            android:gravity="right" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/img_account_balance_line"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/pay58sdk_line"
                        android:contentDescription="@string/image" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="13dp"
                        android:layout_marginRight="13dp" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/need_to_pay"
                            android:textColor="#111111" />

                        <TextView
                            android:id="@+id/tv_need_to_pay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="#E17721"
                            android:gravity="right" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                layout="@layout/pay58sdk_ways_to_pay_layout" />

            <Button
                android:id="@+id/btn_pay_immediately"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/pay58sdk_pay_button"
                android:enabled="false"
                android:text="@string/to_pay"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>